Minor fix for footer on mobile devices.

--- a/assets/styles/modules/basic.less
+++ b/assets/styles/modules/basic.less
@@ -89,4 +89,18 @@ body{
 		font-size: 20px;
 		text-align: center;
 	}
+	.nav.nav{
+		padding: 0;
+		li{
+			display: block;
+			padding: 0 0 15px 0;
+		}
+		a{
+			display: block;
+			padding: 10px 15px;
+			font-size: 20px;
+			border: 1px solid @dothiv-white;
+		}
+}
+
 }
